fix slogan on small width

--- a/scss/my_project_styles.scss
+++ b/scss/my_project_styles.scss
@@ -35,7 +35,7 @@ form, label {
   }
 }
 
-header {
+header, .sub-logo-mobile {
   @include media(580px) {
     display: none;
   }
